bug 2693 Proper word wrap

--- a/source/styles/pages/event/b_match_report.scss
+++ b/source/styles/pages/event/b_match_report.scss
@@ -16,7 +16,6 @@
     padding: 35px;
     min-height: inherit;
 
-    word-break: break-all;
   }
 
   textarea {
